LibTsPlayer: refactor CTC interface [4/4]
PD#SWPL-17066

Problem:
need refactor CTC interface

Solution:
1) refactor our CTC interface， make it conform to CTC standard;
2) adjust our own extension, append it to CTC interface header if it is
public needs.
3) separate middle ware vendor's private extensions from our's.

Verify:
android p/G12A

Change-Id: Iadf5836a5e1ca8c5cf6d9c9f68c88908d4e2c6ab
Signed-off-by: houren.wang <houren.wang@amlogic.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello">Hello World, MediaProcessorDemoActivity!</string>
     <string name="app_name">MediaProcessorTestSuite</string>
     <color name="gray">#FF0000</color> 
+    <string name="button_play">Play</string>
     <string name="button_pause">Pause</string>
     <string name="button_resume">Resume</string>
     <string name="button_seek">Seek</string>
